# mxterm

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  trellis.hjson  vite.config.ts
.github/workflows/: release.yml
.trellis/: .template-hashes.json
docs/plans/: 2026-06-05-mxterm-mvp-foundation-and-ssh-spike.md  2026-06-20-storage-security-sync-foundation.md  2026-06-27-ironrdp-macos-prototype.md  2026-06-27-macos-rdp-embedded-spike.md
docs/posts/: mxterm-cnblogs-introduction.md
docs/requirements/: m-xterm-requirements.md
docs/research/: permissive-open-source-references.md
prototype/light-neutral/: ACCOUNT_MIGRATION_PROMPT.md  mxterm-connection-dialog-compact.html  mxterm-connection-prep-clean.html  mxterm-custom-titlebar.html  mxterm-empty-session.html  mxterm-error-info-refine.html  mxterm-light-neutral-design.md  mxterm-light-neutral.html  mxterm-monitor-cpu-grid.html  mxterm-monitor-panel.html  mxterm-ssh-connect.html
scripts/: build-platform.mjs  build-platform.test.mjs  check-app-select-source.mjs  check-command-sender-active-tab-source.mjs  check-command-sender-mvp-source.mjs  check-command-sender-prototype-source.mjs  check-connection-dialog-host-key-feedback.mjs  check-connection-jump-source.mjs  check-connection-protocol-switch-source.mjs  check-connection-quick-search-source.mjs  check-connection-system-icon.mjs  check-connection-terminal-encoding-source.mjs  check-credential-account-source.mjs  check-dark-mode-source.mjs  check-docker-tool-refresh-source.mjs  check-file-panel-terminal-boundary.mjs  check-global-scrollbar-source.mjs  check-ironrdp-macos-prototype.mjs  check-local-terminal-launcher-source.mjs  check-local-terminal-warmup-source.mjs  check-local-terminal-wsl-source.mjs  check-monitor-cpu-topology-source.mjs  check-rdp-host-empty-close-source.mjs  check-rdp-release-readiness.mjs  check-remote-editor-language-source.mjs  check-remote-file-connection-scope.mjs  check-remote-file-editor-source.mjs  check-remote-file-empty-state.mjs  check-remote-file-loading-indicator-delay.mjs  check-remote-file-local-icons-source.mjs  check-remote-file-locate-reveals-tree.mjs  check-remote-file-panel-connection-remount.mjs  check-remote-file-panel-scroll-boundary.mjs  check-remote-file-session-reuse.mjs  check-session-subtab-memory.mjs  check-settings-page-source.mjs  check-shortcuts-source.mjs  check-startup-module-boundary-source.mjs  check-tab-context-menu-source.mjs  check-terminal-cd-tracker.mjs  (+24 more)
scripts/trellis/: docs-check.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_assistant.rs  app_error.rs  command_library.rs  commands.rs  docker_tools.rs  events.rs  lib.rs  main.rs  mcp.rs  network_tools.rs  rdp.rs  remote_exec_pool.rs  remote_files.rs  remote_monitor.rs  scheduled_tasks.rs  ssh_config.rs  storage.rs  storage_migration.rs  storage_repository.rs  storage_sqlite.rs  storage_vault.rs  sync_snapshot.rs  tunnels.rs  vnc.rs  webdav.rs  webdav_sync.rs
src-tauri/src/connections/: mod.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/known_hosts/: mod.rs
src-tauri/src/terminal/: local.rs  local_profiles.rs  manager.rs  mod.rs  pty.rs  serial.rs  session.rs  telnet.rs
src/shared/: clipboard.ts
(+385 files in other folders)
