[package]
name = "m-xterm"
version = "0.1.0"
description = "Personal desktop SSH/SFTP client"
authors = ["MNL"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "m_xterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
russh = { version = "0.61.1", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3"
tokio = { version = "1", features = ["fs", "io-util", "net", "sync", "time"] }
encoding_rs = "0.8"
primefield = "=0.14.0-rc.9"
tauri-plugin-dialog = "2"
portable-pty = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging"] }
windows-version = "0.1"
