[package]
name = "m-xterm"
version = "0.1.6"
description = "Personal desktop SSH/SFTP client"
authors = ["MNL"]
edition = "2021"
default-run = "m-xterm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "m_xterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mxterm-mcp"
path = "src/bin/mxterm_mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = "0.13.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }
aes-gcm = "0.11.0-rc.4"
argon2 = "0.6.0-rc.8"
base64 = "0.22.1"
sha2 = "0.11.0"
getrandom = "0.3.4"
russh = { version = "0.61.1", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3"
tokio = { version = "1", features = ["fs", "io-util", "net", "sync", "time"] }
encoding_rs = "0.8"
primefield = "=0.14.0-rc.9"
tauri-plugin-dialog = "2"
portable-pty = "0.9"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
serialport = "4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Ole", "Win32_System_RemoteDesktop", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.61"
windows-version = "0.1"
